# robotx_label

./: README.md
label_gazebo/: CMakeLists.txt
label_gazebo/config/: objects_param.yaml  wamv_param.yaml
label_gazebo/launch/: label.launch
label_gazebo/scripts/: geopy.py  label.py
water_msgs/: CMakeLists.txt
